# sources

./: .gitignore  README.md
.github/workflows/: build.yaml  pr.yaml
en.lilymanga/res/: filters.json
en.lilymanga/src/: lib.rs
sources/ar.promanga/: Cargo.toml
sources/en.aurorascans/: Cargo.toml
sources/en.hivescans/: Cargo.toml
sources/en.lilymanga/: Cargo.toml
sources/en.magusmanga/: Cargo.toml
sources/en.mangabat/: Cargo.toml
sources/en.mangakakalot/: Cargo.toml
sources/en.manganato/: Cargo.toml
sources/en.manganelo/: Cargo.toml
sources/en.mangasect/: Cargo.toml
sources/en.manhuagold/: Cargo.toml
sources/en.manhuaplusorg/: Cargo.toml
sources/en.nyxscans/: Cargo.toml
sources/en.tcbscans/: Cargo.toml
sources/en.vortexscans/: Cargo.toml
sources/en.weebcentral/: Cargo.toml
sources/es.eternalmangas/: Cargo.toml
sources/ja.comicdays/: Cargo.toml
sources/ja.manga1000/: Cargo.toml
sources/vi.doctruyen5s/: Cargo.toml
sources/vi.doctruyen5s/res/: filters.json  source.json
sources/vi.doctruyen5s/src/: lib.rs
sources/zh.boylove/: Cargo.toml
sources/zh.boylove/res/: filters.json  settings.json  source.json
sources/zh.boylove/src/: lib.rs  setting.rs  time.rs
sources/zh.boylove/src/html/: mod.rs  test.rs
sources/zh.boylove/src/json/: mod.rs
sources/zh.boylove/src/json/chapter_list/: mod.rs  test.rs
sources/zh.boylove/src/json/daily_update/: mod.rs  test.rs
sources/zh.boylove/src/json/home/: mod.rs  test.rs
sources/zh.boylove/src/json/manga_page_result/: mod.rs  test.rs
sources/zh.boylove/src/json/random/: mod.rs  test.rs
sources/zh.boylove/src/net/: mod.rs  test.rs
(+71 files in other folders)
